# rust-web-sample

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  rustfmt.toml
src/: main.rs
