[package]
name = "smartcab-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres"] }
dotenvy = "0.15.7"
poem = "1.3.58"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = "0.3.17"
